--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
